# LUCI-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  main.lua
include/: ECS.h  color.h
include/compat/: endian.h  getopt.h  math.h  stdint.h  stdio.h  string.h  strings.h  unistd.h  wchar.h  wctype.h
include/compat/sys/: stat.h
include/glad/: glad.h
include/glm/detail/: func_common.inl
script/: cat.lua
shader/: default.frag  default.vert  line.vert  pixelSnap.frag  tileMap.frag  tileMap.vert
src/: LUCI.h  audio.cpp  audio.h  bone.h  camera.h  collisionSystem.cpp  collisionSystem.h  color.h  delog.cpp  delog.h  file.cpp  file.h  font.cpp  font.h  game.cpp  game.h  helper.cpp  helper.h  input_system.cpp  input_system.h  key.h  light.h  loader.cpp  loader.h  luaAPI.cpp  luaAPI.h  luaPlus.cpp  luaPlus.h  lua_API.cpp  main.cpp  material.h  math_types.cpp  math_types.h  mesh.cpp  mesh.h  model.cpp  model.h  node.h  primitive.cpp  primitive.h  (+25 more)
src/core/: audio.cpp  audio.h  file.cpp  file.h  input_system.cpp  input_system.h  key.h  resource.cpp  resource.h  serializer.h  window.cpp  window.h
src/renderer/: api.cpp  api.h  font_system.cpp  font_system.h  helper.cpp  helper.h  render_system.cpp  render_system.h  shader.cpp  shader.h  shader_archive.h
src/shader/: default.frag  default.vert  line.frag  line.vert  pixelSnap.frag  tileMap.frag  tileMap.vert
